fix primary nav on mobile so that nav links are not focusable while nav is closed, and trap focus in nav when open

--- a/style.css
+++ b/style.css
@@ -134,6 +134,15 @@ header nav {
     z-index: 99;
 }
 
+.nav-open {
+    width: 95%;
+    box-shadow: 1px 0px 10px;
+}
+
+.nav-display-override {
+    display: none;
+}
+
 nav a {
     color: rgba(0, 0, 0, 70%);
     text-decoration: none;
@@ -153,11 +162,6 @@ header nav a::after {
 header nav a:hover::after {
     width: 100%;
     left: 0;
-}
-
-.nav-open {
-    width: 95%;
-    box-shadow: 1px 0px 10px;
 }
 
 #close-nav {
@@ -588,6 +592,10 @@ footer p {
         justify-content: flex-end;
         height: fit-content;
         width: 100%;
+    }
+
+    .nav-display-override {
+        display: flex;
     }
 
     header nav li {
